--- a/web/pages/components/Banner/Banner.module.css
+++ b/web/pages/components/Banner/Banner.module.css
@@ -9,4 +9,25 @@
   background: #101010;
   color: #ffffff;
   text-align: left;
+  margin-right: -5px;
+}
+
+.textBanner {
+  padding-top: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  border: 3px solid white;
+  min-height: 50px;
+  background: #101010;
+  color: #ffffff;
+  margin-right: -5px;
+}
+
+.textBanner > h1 {
+  text-align: left;
+  padding-left: 35px;
+  margin-top: 15px;
+  font-size: 30px;
+  margin-bottom: 25px;
 }
