--- a/web/components/Layout/Layout.module.css
+++ b/web/components/Layout/Layout.module.css
@@ -1,18 +1,23 @@
+@import url(https://fonts.googleapis.com/css2?family=Train+One&display=swap);
+
 .container {
   display: flex;
   justify-content: space-between;
   height: 100%;
 }
+
 .content {
   flex: 1;
   margin-left: 35px;
   overflow-x: hidden;
-  scrollbar-width: none; /* Firefox */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 /* scroll bar */
 .content::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+  display: none;
+  /* Safari and Chrome */
 }
 
 .header {
