--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Train+One&display=swap);
 
 html,
 body {
