--- a/web/styles/Stats.module.scss
+++ b/web/styles/Stats.module.scss
@@ -1,9 +1,10 @@
+@import "./vars.scss";
+
 .cards {
   display: grid;
   row-gap: 20px;
   margin-bottom: 25px;
-  /* Small devices (portrait tablets and large phones, 600px and up) */
-  @media only screen and (min-width: 600px) {
+  @media only screen and (min-width: $screen-medium) {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 30px;
     row-gap: 35px;
@@ -11,8 +12,7 @@
     padding-right: 20px;
   }
 
-  /* Large devices (laptops/desktops, 992px and up) */
-  @media only screen and (min-width: 992px) {
+  @media only screen and (min-width: $screen-large) {
     grid-template-columns: repeat(4, 1fr);
     gap: 40px;
   }
