--- a/web/components/Layout/Layout.module.scss
+++ b/web/components/Layout/Layout.module.scss
@@ -65,7 +65,7 @@
   z-index: 10;
   padding-top: 20px;
   padding-bottom: 10px;
-  padding-left: 20px;
+  padding-left: 13px;
   margin-bottom: 0;
 
   .branding {
@@ -76,7 +76,7 @@
       margin: 0;
       @media only screen and (max-width: $screen-small-max) {
         font-size: 1.4rem;
-        font-weight: lighter;
+        font-weight: 550;
         text-transform: uppercase;
       }
     }
@@ -84,6 +84,7 @@
 
   @media only screen and (min-width: $screen-medium) {
     color: #ffffff;
+    padding-left: 20px;
   }
 
   @media only screen and (min-width: $screen-large) {
