style(web): fix inconsistent styles

--- a/web/components/Banner/Banner.module.scss
+++ b/web/components/Banner/Banner.module.scss
@@ -18,6 +18,7 @@
 }
 
 .textBanner {
+  font-family: "Encode Sans SC", sans-serif;
   text-align: center;
   color: #ffffff;
   background: #101010;
