--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -6,7 +6,8 @@ body {
   padding: 0;
   margin: 0;
   background-color: #202020;
-  font-family: "Encode Sans SC", sans-serif;
+  color: white;
+  font-family: sans-serif;
   height: 100%;
 }
 
