style(web): use Century Gothic font in header and blog title/summary

--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@900&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Train+One&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap); /* Branding, Page title, Blog post title/summary  */
+@import url(https://fonts.googleapis.com/css2?family=Train+One&display=swap); /* NavBar links */
 
 html,
 body {
