--- a/web/components/BlogPost/BlogPost.module.scss
+++ b/web/components/BlogPost/BlogPost.module.scss
@@ -3,7 +3,7 @@
 .post {
   border: 3px solid white;
   padding: 1rem;
-  font-family: sans-serif;
+  font-family: "Didact Gothic", sans-serif;
   &:hover {
     cursor: pointer;
   }
