--- a/web/components/Layout/Layout.module.scss
+++ b/web/components/Layout/Layout.module.scss
@@ -67,12 +67,12 @@
   padding-bottom: 10px;
   padding-left: 13px;
   margin-bottom: 0;
+  font-family: "Didact Gothic", sans-serif;
 
   .branding {
     /* float: left; */
     font-size: 24px;
     h1 {
-      font-family: sans-serif;
       margin: 0;
       @media only screen and (max-width: $screen-small-max) {
         font-size: 1.4rem;
@@ -103,13 +103,10 @@
   }
 }
 
-@media only screen and (min-width: $screen-medium) {
-  .header .highlight {
-    font-family: "Syncopate", sans-serif;
-    color: #202020;
-    font-weight: bold;
-    margin-left: 35px;
-  }
+.header .highlight {
+  color: #202020;
+  font-weight: bold;
+  margin-left: 35px;
 }
 /*////////////////////////////////////////////////////////////////// Right Nav Bar */
 
