--- a/web/components/BlogPost/BlogPost.module.scss
+++ b/web/components/BlogPost/BlogPost.module.scss
@@ -4,25 +4,60 @@
   border: 3px solid white;
   padding: 1rem;
   font-family: "Didact Gothic", sans-serif;
-  &:hover {
-    cursor: pointer;
-  }
-  .header {
-    .title {
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr) repeat(2, 1fr);
+  column-gap: 1rem;
+
+  .textArea {
+    grid-column: 1 / 4;
+
+    .header {
+      .title {
+        margin: 0;
+        text-transform: none;
+        &:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
+      }
+      .createdAt {
+        color: white;
+      }
+      color: #18a3d9;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      border-bottom: 2px solid white;
+      padding-bottom: 0.2rem;
+    }
+
+    .summary {
+      /* number of lines to show */
+      $lines: 6;
       margin: 0;
-      text-transform: none;
-      &:hover {
-        text-decoration: underline;
-        cursor: pointer;
+      padding-right: 0.3rem;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: $lines;
+      line-clamp: $lines;
+      -webkit-box-orient: vertical;
+
+      @media only screen and (min-width: $screen-medium) {
+        $lines: 10;
+        -webkit-line-clamp: $lines;
+        line-clamp: $lines;
       }
     }
-    color: #18a3d9;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    border-bottom: 2px solid white;
-    padding-bottom: 0.2rem;
   }
+
+  .image {
+    grid-column: 4 / 6;
+    height: fit-content;
+    border: 2px solid #18a3d2;
+  }
+
   .body {
     color: white;
     margin-top: 1rem;
@@ -54,9 +89,8 @@
         line-clamp: $lines;
       }
     }
-    .image {
-      grid-column: 4 / 6;
-      border: 2px solid #18a3d2;
-    }
+  }
+  &:hover {
+    cursor: pointer;
   }
 }
