feat(web): add comment form UI

--- a/web/styles/vars.scss
+++ b/web/styles/vars.scss
@@ -8,3 +8,6 @@ $screen-medium-max: 1007px;
 /* Large devices (laptops/desktops, 1024px and up) */
 $screen-large: 1024px;
 $screen-large-min: 1024px; /* PC*/
+
+$bg-light: #3d3d3d;
+$bg-dark: #202020;
