feat(web): make the header as a link to home

--- a/web/components/Layout/Layout.module.scss
+++ b/web/components/Layout/Layout.module.scss
@@ -101,6 +101,7 @@
 .header .highlight {
   color: #202020;
   font-weight: bold;
+  cursor: pointer;
 }
 /*////////////////////////////////////////////////////////////////// Right Nav Bar */
 
