--- a/web/styles/Post.module.scss
+++ b/web/styles/Post.module.scss
@@ -1,34 +1,55 @@
+@import "styles/vars.scss";
+
 .postPage {
   margin-top: 1rem;
-  .post {
-    border: 2px solid white;
-    padding: 0.5rem 1rem 0.3rem 1rem;
-    .header {
-      h1 {
-        margin: 0;
+
+  .mainContent {
+    .post {
+      border: 2px solid white;
+      padding: 0.5rem 1rem 0.3rem 1rem;
+      .header {
+        h1 {
+          margin: 0;
+        }
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        color: #1b90bc;
+        border-bottom: 2px solid white;
+        padding: 0 0.2rem;
       }
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      color: #1b90bc;
-      border-bottom: 2px solid white;
-      padding: 0 0.2rem;
+
+      .actions {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin-top: 0.5rem;
+        gap: 0.4rem;
+      }
+
+      img {
+        max-width: 100%;
+      }
     }
 
-    .actions {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      margin-top: 0.5rem;
-      gap: 0.4rem;
-    }
-
-    img {
-      max-width: 100%;
+    .commentForm {
+      margin-top: 1rem;
     }
   }
+  .recentPosts {
+    display: none;
+  }
 
-  .commentForm {
-    margin-top: 1rem;
+  @media only screen and (min-width: $screen-large) {
+    display: grid;
+    grid-template-columns: 30% 1fr;
+    column-gap: 1rem;
+    .recentPosts {
+      display: block;
+      order: 1;
+    }
+    .mainContent {
+      order: 2;
+    }
   }
 }
