--- a/web/components/IconButton/IconButton.module.scss
+++ b/web/components/IconButton/IconButton.module.scss
@@ -4,6 +4,8 @@
   padding: 0;
   color: white;
   background-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
   &:hover {
     cursor: pointer;
   }
