--- a/web/components/PlayerStatsCard/PlayerStatsCard.module.scss
+++ b/web/components/PlayerStatsCard/PlayerStatsCard.module.scss
@@ -15,10 +15,12 @@
     border: 3px solid white;
     padding: 0.3rem;
   }
-  .name {
+  .header {
     grid-area: name;
     padding: 0.1rem 0.1rem;
-    border: 3px solid white;
+    border: 3px solid transparent;
+    display: flex;
+    justify-content: space-between;
   }
   .info {
     margin-top: 0.3rem;
