style(web): add scss variables for charts page

--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -1,4 +1,8 @@
-$primary-color: #99d612;
+$primary-color: #07aae2;
+$text-primary-color: #ffffff;
+$border-color: #ffffff;
+$bg-color: #404040;
+$header-bg-color: #202020;
 
 .chartsPage {
   .searchForm {
