--- a/web/components/PlayerBioCard/PlayerBioCard.module.scss
+++ b/web/components/PlayerBioCard/PlayerBioCard.module.scss
@@ -1,19 +1,20 @@
+@import "styles/vars.scss";
 @import "styles/Charts.module.scss";
 
 .playerCard {
   display: grid;
-  grid-template-columns: 35% 1fr;
+  grid-template-columns: 35% 65%;
   grid-template-rows: 20% 80%;
   grid-template-areas:
     "image name"
     "image info";
-  grid-column-gap: 0.7rem;
 
-  .playerImage {
+  .playerImageWrapper {
     grid-area: image;
     position: relative;
     border: 3px solid white;
     padding: 0.3rem;
+    margin-right: 0.4rem;
   }
   .header {
     grid-area: name;
@@ -21,24 +22,28 @@
     border: 3px solid transparent;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    font-family: "Century Gothic";
+    font-weight: bold;
   }
   .info {
     margin-top: 0.3rem;
     grid-area: info;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 100px;
     align-items: center;
 
     border: 3px solid white;
     padding: 0.3rem;
     .stats {
-      justify-self: start;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       font-size: small;
       .statsLine {
         width: 100%;
         display: grid;
-        grid-template-columns: 80% 5% 1fr;
+        grid-template-columns: 60% 5% 35%;
         .label {
           color: #a5a0a2;
           text-align: right;
@@ -58,6 +63,54 @@
 
         color: yellow;
       }
+    }
+  }
+  // full team name only exist in PC
+  .teamName {
+    grid-area: teamName;
+    display: none;
+  }
+
+  // PC view
+  @media only screen and (min-width: $screen-large) {
+    height: 100%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 20% 60% 20%;
+    grid-template-areas:
+      "name name"
+      "info image"
+      "teamName teamName";
+
+    .header {
+      border: $border-thin solid $border-color;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .teamAbbreviation {
+        display: none;
+      }
+    }
+
+    .playerImageWrapper {
+      margin-right: 0;
+    }
+
+    .info {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      margin-top: 0;
+
+      .stats {
+        // reverse the team logo and stats
+        order: 1;
+      }
+    }
+
+    .teamName {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: $border-thin solid $border-color;
     }
   }
 
