refactor(web): move scss variables to vars.scss

--- a/web/styles/vars.scss
+++ b/web/styles/vars.scss
@@ -9,5 +9,8 @@ $screen-medium-max: 1007px;
 $screen-large: 1024px;
 $screen-large-min: 1024px; /* PC*/
 
+$primary-color: #07aae2;
+$text-primary-color: #ffffff;
+$border-color: #ffffff;
 $bg-light: #3d3d3d;
 $bg-dark: #202020;
