feat(web): add TOI chart for mobile

--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -37,6 +37,7 @@ $small: 6px;
     .timeOnIce {
       grid-area: timeOnIce;
       margin-top: $small;
+      padding: 0.3rem 0.2rem 0 0.2rem;
     }
 
     .weeklyRank {
