style(web): adjust the size of TOI chart on PC

--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -70,6 +70,10 @@ $small: 6px;
         "coverageChart careerAverages"
         "coverageChart careerAverages";
     }
+
+    .timeOnIce {
+      margin-top: unset;
+    }
   }
 
   .box {
