style(web): PC: add white border and chart title for TOI chart

--- a/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
+++ b/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
@@ -1,4 +1,5 @@
 @import "styles/vars.scss";
+@import "styles/Charts.module.scss";
 
 .container {
   .chartWrapper {
@@ -19,6 +20,43 @@
   .allOptions {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 3px;
+  }
+
+  @media only screen and (min-width: $screen-large) {
+    padding-top: 3px;
+    .allOptions {
+      padding-left: 1rem;
+      padding-right: 3rem;
+      padding-bottom: 5px;
+      margin-bottom: 6px;
+
+      position: relative;
+      display: flex;
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: -13px;
+        height: $border-thin;
+        width: 135%;
+        background-color: white;
+      }
+    }
+
+    .chartWrapper {
+      padding-right: 8px;
+      padding-top: 3px;
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -13px;
+        height: $border-thin;
+        width: 135%;
+        background-color: white;
+      }
+    }
   }
 }
