--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -10,26 +10,47 @@ $small: 6px;
 
 .chartsPage {
   // player search input
-  .playerAutocomplete {
-    border: $border-bold solid $primary-color;
-    border-radius: 14px;
-    color: $primary-color;
-    background-color: $bg-dark;
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
-    padding-left: 0.7rem;
-    &::placeholder {
+  .playerAutocompleteWrapper {
+    margin: 0.5rem 0 0.5rem 0;
+
+    .playerAutocomplete {
+      border: $border-bold solid $primary-color;
+      border-radius: 14px;
       color: $primary-color;
-      font-style: italic;
+      background-color: $bg-dark;
+      padding-top: 0.2rem;
+      padding-bottom: 0.2rem;
+      padding-left: 0.7rem;
+      &::placeholder {
+        color: $primary-color;
+        font-style: italic;
+      }
+    }
+
+    .autocompleteList {
+      padding: 5px;
+      border: $border-thin solid $primary-color;
+      border-radius: 14px;
+      padding-left: 0.7rem;
     }
   }
 
-  .autocompleteList {
-    padding: 5px;
-    border: $border-thin solid $primary-color;
-    border-radius: 14px;
-    padding-left: 0.7rem;
+  @media only screen and (min-width: $screen-large) {
+    .playerAutocompleteWrapper {
+      width: 280px;
+      margin: 1rem 0 0.5rem 1rem;
+      .playerAutocomplete {
+        height: 35px;
+        font-size: 1.2rem;
+        border-color: white;
+        border-radius: $rounded-border;
+        padding-top: 0.1rem;
+        padding-bottom: 0.1rem;
+        padding-left: 0.7rem;
+      }
+    }
   }
+
   // Dashboard
   .dashboard {
     border: 3px solid white;
