feat(web): PC: add time options

--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -9,6 +9,7 @@ $header-bg-color: #202020;
 $small: 6px;
 
 .chartsPage {
+  margin-bottom: 2rem;
   // player search input
   .playerAutocompleteWrapper {
     margin: 0.5rem 0 0.5rem 0;
