--- a/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
+++ b/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
@@ -28,7 +28,7 @@
     padding-top: 3px;
     .allOptions {
       padding-left: 1rem;
-      padding-right: 3rem;
+      padding-right: 1rem;
       padding-bottom: 5px;
       margin-bottom: 6px;
 
@@ -46,6 +46,7 @@
     }
 
     .chartWrapper {
+      padding-left: 5px;
       padding-right: 8px;
       padding-top: 3px;
       &::before {
