--- a/web/components/Text/Text.module.scss
+++ b/web/components/Text/Text.module.scss
@@ -3,11 +3,17 @@
 .base {
   font-size: x-large;
   font-weight: bold;
+  display: inline-block;
   &.normal {
     color: $text-primary-color;
   }
 
   &.hightlight {
     color: $primary-color;
+  }
+
+  @media only screen and (max-width: $screen-medium-max) {
+    text-transform: uppercase;
+    font-size: 9px;
   }
 }
