--- a/web/components/SubstainabilityChart/SubstainabilityChart.module.scss
+++ b/web/components/SubstainabilityChart/SubstainabilityChart.module.scss
@@ -3,3 +3,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.mobileTable {
+  width: 100%;
+}
+
+.cell {
+  border: 3px solid white;
+}
