style(web): bio card make values display in line

--- a/web/components/PlayerBioCard/PlayerBioCard.module.scss
+++ b/web/components/PlayerBioCard/PlayerBioCard.module.scss
@@ -51,6 +51,7 @@
         .value {
           font-weight: bold;
           color: $primary-color;
+          white-space: nowrap;
         }
       }
     }
