--- a/web/components/BurgerButton/BurgerButton.module.scss
+++ b/web/components/BurgerButton/BurgerButton.module.scss
@@ -1,8 +1,15 @@
 .button {
+  padding: unset;
   border: none;
   background: none;
   width: 30px;
-  height: 30px;
+  // height: 30px;
+  div {
+    width: 100%;
+    height: 3px;
+    background-color: black;
+    margin: 5px 0;
+  }
   &:hover {
     cursor: pointer;
   }
