style(web): adjust stats name style

--- a/web/components/SubstainabilityChart/SubstainabilityChart.module.scss
+++ b/web/components/SubstainabilityChart/SubstainabilityChart.module.scss
@@ -40,6 +40,11 @@
       height: 50px;
       border: $border-bold solid white;
     }
+
+    .statsName {
+      font-weight: bold;
+      margin-bottom: 2px;
+    }
   }
 }
 
