--- a/web/components/Spinner/Spinner.module.scss
+++ b/web/components/Spinner/Spinner.module.scss
@@ -8,12 +8,18 @@
 }
 .spinnerContainer {
   .loadingSpinner {
-    width: 28px;
-    height: 28px;
     border: 3px solid #f3f3f3; /* Light grey */
     border-top: 3px solid #383636; /* Black */
     border-radius: 50%;
     animation: spinner 1.5s linear infinite;
+  }
+  .medium {
+    width: 28px;
+    height: 28px;
+  }
+  .small {
+    width: 18px;
+    height: 18px;
   }
 }
 
