feat(web): add column radio options

--- a/web/components/RadioOptions/RadioOptions.module.scss
+++ b/web/components/RadioOptions/RadioOptions.module.scss
@@ -26,4 +26,14 @@
   input {
     margin: unset;
   }
+
+  .column {
+    flex-direction: column-reverse;
+    margin-right: unset;
+
+    .label {
+      margin-left: unset;
+      margin-bottom: 12px;
+    }
+  }
 }
