feat(web): add full screen mode

--- a/web/components/CategoryCoverageChart/CategoryCoverageChart.module.scss
+++ b/web/components/CategoryCoverageChart/CategoryCoverageChart.module.scss
@@ -48,6 +48,8 @@
     }
 
     .content {
+      width: 2px;
+
       border-right: $border-thin solid white;
       padding-left: 6px;
       padding-right: 6px;
