--- a/web/components/PlayerBioCard/PlayerBioCard.module.scss
+++ b/web/components/PlayerBioCard/PlayerBioCard.module.scss
@@ -15,6 +15,9 @@
     border: 3px solid white;
     padding: 0.3rem;
     margin-right: 0.4rem;
+    &:hover {
+      cursor: pointer;
+    }
   }
   .header {
     grid-area: name;
