--- a/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
+++ b/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   .chartWrapper {
     position: relative;
-    height: 80px;
+    height: 100%;
     .loading {
       position: absolute;
       left: 50%;
