--- a/web/components/SustainabilityVSCareerChart/SustainabilityVSCareerChart.module.scss
+++ b/web/components/SustainabilityVSCareerChart/SustainabilityVSCareerChart.module.scss
@@ -7,14 +7,15 @@
 
   .row {
     display: grid;
-    grid-template-columns: 30% 1fr 1fr;
+    grid-template-columns: 1fr 35% 1fr;
     align-items: center;
     &:not(:last-child) {
       margin-bottom: 4px;
     }
     .label {
       font-size: 0.625rem;
-      margin-right: 5px;
+      text-align: center;
+      padding: 0 3px;
     }
     .careerAveragesStat,
     .sustainabilityStat {
@@ -23,7 +24,6 @@
     }
 
     .careerAveragesStat {
-      margin-left: 4px;
       background: rgba(217, 217, 217, 0.2);
     }
   }
